 * Gravity: Using the low gravity *utility* had no effect. Now it halves the base gravity of the style
 * Disable Sudden Death for good in Shoppa game scheme, some game styles and mission maps

A Classic Fairytale:
 + Mission 4: Add infinite skip
 + Mission 5: Spare traitor's life with Skip instead of Precise
 + Mission 6: Add alternate dialogues when killing cyborgs before collecting the crates
 + All missions: Clarify mine timers
 * Mission 1: Leap of faith: Hog was able to walk to the right and get stuck
 * Mission 1: Leap of faith: Teleport player back to mole when failing
 * Mission 2: Fix crash when trying to open ammo menu in opening sequence
 * Mission 2: Fix game sometimes getting stuck after walking back to Leaks A Lot
 * Mission 2: Fix breakages when heroes died before a new sequence, or together with enemies
 * Mission 2: Remove restart option when cooperating with cyborg; it messed up things too much
 * Mission 3: Fix various Lua errors when playing with 2 hogs and one of them dies
 * Mission 3: Fix broken end sequence after killing cyborg or princess
 * Mission 3: Fix broken sequence of princess being caged
 * Mission 3: All girder crates now have 3 girders each
 * Mission 5: Fix crash when skipping animation while the cyborg talks before the 3rd wave of cannibals starts
 * Mission 5: Make sure the player can only play with one hog after the cyborg imprisoned the other natives
 * Mission 5: Fix final animation being stuck if cyborg's way to the left is blocked
 * Mission 6: Block off left cave entrance to stop player to just rope all the way around
 * Mission 6: Fix mines not being able to get triggered in first turn
 * Mission 8: Fix Lua error message at the very beginning and error spam in intro sequence
 * Mission 10: Fix mission becoming unplayable when all hogs except the traitor died
 * All missions: Add missing texts for translation
 * All missions: Fix incorrect crate types
 * All missions: Rewrite mission texts to state missions more clearly