@@ -233,6 +233,7 @@ A Classic Fairytale:
  + Mission 4: Add infinite skip
  + Mission 5: Spare traitor's life with Skip instead of Precise
  + Mission 6: Add alternate dialogues when killing cyborgs before collecting the crates
+ + Mission 6: Give hero only a portal gun at the final portal seqment, remove the large amount of crate drops
  + All missions: Clarify mine timers
  * Mission 1: Leap of faith: Hog was able to walk to the right and get stuck
  * Mission 1: Leap of faith: Teleport player back to mole when failing
